@@ -40,7 +40,7 @@ and \-\-libs options.  This option must be specified before any
 .BR gimp (1),
 .BR gimptool (1)
 .SH COPYRIGHT
-Copyright \(co  1995 Spencer Kimball and Peter Mattis
+Copyright \(co  1998 Owen Taylor
 
 Permission to use, copy, modify, and distribute this software and its
 documentation for any purpose and without fee is hereby granted,
